--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@ dist-ssr
 *.pyc
 *.pyc
 *.db
+backend/__pycache__/main.cpython-312.pyc
+backend/__pycache__/main.cpython-312.pyc
+backend/__pycache__/main.cpython-312.pyc
+*.pyc
+*.pyc
