--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ backend/__pycache__/main.cpython-312.pyc
 backend/__pycache__/main.cpython-312.pyc
 *.pyc
 *.pyc
+*.pyc
+backend/__pycache__/main.cpython-312.pyc
