--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,6 @@ backend/__pycache__/main.cpython-312.pyc
 *.pyc
 *.pyc
 backend/__pycache__/main.cpython-312.pyc
+backend/__pycache__/main.cpython-312.pyc
+*.pyc
+*.pyc
